tests/fixtures/invalid/bytes_rshift_bytes.py
# Test bytes right shift (unsupported operator)
x: bytes = b"hello"
y: bytes = b"world"
result: bytes = x >> y
